otus1.5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/borisershov(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: userlist-service
                port:
                  number: 8000
